--- a/module06/ex07/ex07.md
+++ b/module06/ex07/ex07.md
@@ -1,4 +1,4 @@
-# Exercise 07 - Practicing Linear Regression
+[#](#) Exercise 07 - Practicing Linear Regression
 
 |                         |                    |
 | -----------------------:| ------------------ |
