--- a/module06/ex06/ex06.md
+++ b/module06/ex06/ex06.md
@@ -1,4 +1,4 @@
-# Exercise 06 - Linear Regression with Class
+[#](#) Exercise 06 - Linear Regression with Class
 
 |                         |                     |
 | -----------------------:| ------------------  |
